[package]
name = "ipjdb"
version = "0.2.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"
repository = "https://github.com/nicholasbishop/ipjdb"
license = "Apache-2.0"
description = "In-process JSON database"

[dependencies]
fs2 = "0.4"
rand = "0.6"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"
