[package]
name = "ipjdb"
version = "0.14.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"
repository = "https://github.com/nicholasbishop/ipjdb"
license = "Apache-2.0"
description = "In-process JSON database"
readme = "README.md"

[dependencies]
fs2 = "0.4"
rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"
