[badges.maintenance]
status = "deprecated"

[package]
name = "ipjdb"
version = "0.16.1"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2021"
repository = "https://github.com/nicholasbishop/ipjdb"
license = "Apache-2.0"
description = "In-process JSON database"

[dependencies]
fs2 = "0.4.3"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
thiserror = "1.0.30"

[dev-dependencies]
tempfile = "3.2.0"
